app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: demo
spec:
  rules:
  - host: frontend.192.168.42.221.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend
          servicePort: 8080
  - host: backend.192.168.42.221.xip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: backend
          servicePort: 3000
